# HyderabadIndiaChapter_ChatbotInterviewPreparation

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.dvc/: config
app/: components.py  config.py  main.py  types.py
data/: .gitignore  README.md  final.dvc  raw.dvc
lib/: agents.py  configs.py  tools.py  types.py
src/notebook/: 01-aj-interview-question-generation.ipynb
src/task-1/data/: .gitignore
src/task-4/: README.md
src/task-4/notebook/:  01-ac-langchain_pipeline.ipynb.ipynb  01-aj-interview-question-generation.ipynb  02-aj-interview-response-evaluation.ipynb  02_ac_langchain_pipeline(fexible_dialogue_manager).ipynb  03-aj-interview-question-generation.ipynb  04-aj-interview-response-evaluation.ipynb  05-aj-interview-question-generation.ipynb  06-aj-interview-response-evaluation.ipynb  InterviewChatbot_dev1.ipynb
src/task-5/: README.md
