[tool.poetry]
name = "chatbot-interview-prep"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "hireprep", from = "lib" },
]

[tool.poetry.dependencies]
python = "^3.10"
dvc = {extras = ["s3"], version = "^3.30.1"}
numpy = "^1.26.2"
pandas = "^2.1.3"
streamlit = "^1.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
