[tool.poetry]
name = "chatbot-interview-prep"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "lib", from = "." },
]

[tool.poetry.dependencies]
python = "^3.10"
dvc = {extras = ["s3"], version = "^3.30.1"}
numpy = "^1.26.2"
pandas = "^2.1.3"
streamlit = "^1.28.2"
cohere = "^4.35"
pydantic = "^2.5.1"
python-dotenv = "^1.0.0"
openai = "^1.3.5"
google-generativeai = "^0.2.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"
black = {extras = ["jupyter"], version = "^23.11.0"}
flake8 = "^6.1.0"
pre-commit = "^3.5.0"
commitizen = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist

    # The following are specific to Black, you probably don't want those.
    | blib2to3
    | tests/data
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true